include $(top_srcdir)/compile.mk

noinst_LIBRARIES = libutil.a

libutil_a_SOURCES =	\
	crc16.c		\
	crc32.c		\
	errno.c		\
	lock.c		\
	malloc.c	\
	map.c		\
	memchr.c	\
	memcmp.c	\
	memmove.c	\
	printf.c	\
	sha256.c	\
	siphash.c	\
	strcat.c	\
	strchr.c	\
	strcmp.c	\
	strcpy.c	\
	strdup.c	\
	strlen.c	\
	strstr.c	\
	strtoul.c
