acpiincludedir = $(includedir)/acpi

acpiinclude_HEADERS =	\
	acapps.h	\
	acbuffer.h	\
	acclib.h	\
	accommon.h	\
	acconfig.h	\
	acconvert.h	\
	acdebug.h	\
	acdisasm.h	\
	acdispat.h	\
	acenv.h		\
	acevents.h	\
	acexcep.h	\
	acgcc.h		\
	acglobal.h	\
	achware.h	\
	acinterp.h	\
	aclocal.h	\
	acmacros.h	\
	acnames.h	\
	acnamesp.h	\
	acobject.h	\
	acopcode.h	\
	acoutput.h	\
	acparser.h	\
	acpi.h		\
	acpiosxf.h	\
	acpixf.h	\
	acpml.h		\
	acpredef.h	\
	acresrc.h	\
	acrestyp.h	\
	acstruct.h	\
	actables.h	\
	actbinfo.h	\
	actbl.h		\
	actbl1.h	\
	actbl2.h	\
	actbl3.h	\
	actypes.h	\
	acutils.h	\
	acuuid.h	\
	amlcode.h	\
	amlresrc.h
